--- a/resume/index.html
+++ b/resume/index.html
@@ -294,18 +294,20 @@
       <div class="text-center our-publications">
         <div class="row">
           <div class="col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <a class="pub-read-more" href="#" data-single_url="publications.html" >
             <div class="publication-icon">
-              <i class="fa fa-flask"></i>
-            </div>
+              <i class="fa fa-book" style="color:white;"></i>
+            </div></a>
             <div class="service-info">
               <h3><a class="pub-read-more" href="#" data-single_url="publications.html" ><i class="fa fa-link">文章列表</i></a></h3>
               <p>该部分包括已发表和计划发表的文章（已注明）。</p>
             </div>
           </div>
           <div class="col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <a class="pub-read-more" href="#" data-single_url="patents.html" >
             <div class="publication-icon">
-              <i class="fa fa-flask"></i>
-            </div>
+              <i class="fa fa-rocket"></i>
+            </div></a>
             <div class="service-info">
               <h3><a class="pub-read-more" href="#" data-single_url="patents.html" ><i class="fa fa-link">专利列表</i></a></h3>
               <p>该部分包括申请的专利列表。</p>
