--- a/resume/index.html
+++ b/resume/index.html
@@ -581,6 +581,21 @@
           <script type="text/javascript" src="js/jquery.countTo.js"></script>
           <script type="text/javascript" src="js/lightbox.min.js"></script>
           <script type="text/javascript" src="js/main.js"></script>
+          <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-6527820-1', 'auto');
+  ga('require', 'displayfeatures');
+  ga('require', 'linkid', 'linkid.js');
+  ga('send', 'pageview');
+</script>
+           <a title="" href="http://clicky.com/100788619"></a><img alt="" src="//static.getclicky.com/media/links/badge.gif" border="0" />
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(100788619); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100788619ns.gif" /></p></noscript>
 
         </body>
         </html>
