--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/public/favicon.ico">
   </head><!--/head-->
 
   <body>
