--- a/resume/index.html
+++ b/resume/index.html
@@ -31,6 +31,7 @@
               <h1 class="animated fadeInLeftBig">欢迎阅读您<br/><span>我的简历</span></h1>
               <p class="animated fadeInRightBig">基本信息 - 项目经历 - 个人技能 - 其他信息</p>
               <a data-scroll class="btn btn-start animated fadeInUpBig" href="#general-info">开始阅读</a>
+              <p id="wx" class="animated fadeInUpBig" style="padding-top:15px; font-size:60%; color:#aaa">微信内置浏览器效率低下，请使用自带浏览器查看该网页</p>
             </div>
           </div>
         </div>
